--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,113 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&display=swap");
+
+:root {
+  /* fonts */
+  --noto-sans: "Noto Sans";
+
+  /* font sizes */
+  --h1-size: 3rem;
+  --h2-size: 2.5rem;
+  --h3-size: 2rem;
+  --h4-size: 1.5rem;
+  --h5-size: 1.25rem;
+  --h6-size: 1.125rem;
+  --body-xlarge-size: 1.125rem;
+  --body-large-size: 1rem;
+  --body-medium-size: 0.875rem;
+  --body-small-size: 0.75rem;
+  --body-xsmall-size: 0.625rem;
+
+  /* font weights */
+  --regular: 400;
+  --medium: 500;
+  --bold: 700;
+
+  /* Colors */
+  --primary-500: #00983a;
+  --primary-400: #00b74a;
+  --primary-300: #00d05c;
+  --primary-200: #00e86d;
+  --primary-100: #00ff7f;
+  --primary-50: #33ff99;
+  --secondary-500: #232263;
+  --secondary-400: #2d2d7a;
+  --secondary-300: #37378f;
+  --secondary-200: #4141a4;
+  --secondary-100: #4b4bb9;
+  --secondary-50: #5e5ec9;
+
+  /* Greyscale */
+  --grey-900: #212121;
+  --grey-800: #424242;
+  --grey-700: #616161;
+  --grey-600: #757575;
+  --grey-500: #9e9e9e;
+  --grey-400: #bdbdbd;
+  --grey-300: #e0e0e0;
+  --grey-200: #eeeeee;
+  --grey-100: #f5f5f5;
+  --grey-50: #fafafa;
+
+  /* Others */
+  --white: #ffffff;
+  --black: #000000;
+  --dashboard-background: #f1f5f9;
+}
+
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+p {
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body::-webkit-scrollbar {
+  width: 0
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  text-decoration: none;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  line-height: normal;
+  letter-spacing: 0.2px;
+  font-family: var(--noto-sans);
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
