--- a/src/components/home/cards/Card.module.css
+++ b/src/components/home/cards/Card.module.css
@@ -46,3 +46,12 @@
     font-size: 12px;
   }
 }
+
+.cardproduct {
+  aspect-ratio: 0.8709677419354839;
+  background-repeat: no-repeat;
+  background-size: cover;
+  cursor: pointer;
+  filter: drop-shadow(0px 15px 40px rgba(35, 34, 99, 0.15));
+  position: relative;
+}
