--- a/src/components/ui/footer/Footer.module.css
+++ b/src/components/ui/footer/Footer.module.css
@@ -1,1 +1,194 @@
-.footer {}
+.footer {
+  background-color: #232263;
+  clip-path: ellipse(80% 76% at 50% 75%);
+}
+
+.content {
+    width: 1245px;
+    margin: auto;
+    padding-top: 6em;
+    padding-bottom: 1em;
+}
+
+.detail {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: start;
+  margin-bottom: 3em;
+  gap: 40px;
+  flex-wrap: wrap;
+}
+
+
+.detail div {
+    width: 16em;
+  }
+
+.introduction {
+  display: flex;
+  gap: 15px;
+  flex-direction: column;
+}
+
+.introduction p {
+  font-size: var(--body-medium-size);
+  color: white;
+  padding-right: 27px;
+}
+
+.introduction label {
+  font-size: 12px;
+  color: white;
+}
+
+.socials {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px;
+  gap: 15px;
+}
+
+.category {
+  display: grid;
+  gap: 15px;
+}
+
+.category span {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.category p {
+  padding-left: 10px;
+  color: var(--white);
+}
+
+.wellness {
+  border-left: 3px solid #ce3b3e;
+}
+
+.surgery {
+  border-left: 3px solid #c92387;
+}
+
+.consultation {
+  border-left: 3px solid #1476b8;
+}
+
+.dental {
+  border-left: 3px solid #ffbb00;
+}
+
+.include {
+  border-left: 3px solid #17871d;
+}
+
+.test {
+  border-left: 3px solid #218371;
+}
+
+.therapy {
+  border-left: 3px solid #ff8d0a;
+}
+
+.app {
+  display: grid;
+  gap: 15px;
+}
+
+.app p,
+.app label {
+  color: var(--white);
+}
+
+.app p {
+  font-size: var(--body-xlarge-size);
+}
+
+.newsletter {
+  padding: 28px 36px;
+  background: rgba(255, 255, 255, 0.05);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.newsletterText {
+    color: var(--white);
+    display: grid;
+    gap: 5px;
+}
+
+.newsletterText h4{
+ font-size: var(--h4-size);
+}
+
+.newsletterForm {
+  position: relative;
+  display: inline-block;
+}
+
+.newsletterForm svg {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+}
+
+.newsletterInput {
+  border-radius: 20px;
+  background-color: white;
+  padding: 5px 10px 5px 3em;
+  font-size: 16px;
+  width: 457px;
+  height: 48px;
+  border: none;
+}
+
+.newsletterButton {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 5px;
+  padding: 10px 10px;
+  border: none;
+  width: 100px;
+  border-radius: 30px;
+  background-color: var(--primary-500);
+  color: white;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.menu {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(9, auto);
+    gap: 10px;
+}
+
+.menu p{
+    width: auto;
+    font-size: 14px;
+    color: var(--white);
+    margin: 3em 0px;
+}
+
+.bottombar , .bottombar div{
+    display: flex;
+    justify-content: space-between;
+    color: var(--white);
+}
+
+.bottombar div {
+    width: 770px;
+}
+
+.bottombar span {
+    margin: 0px 5px;
+    display: flex;
+    align-items: center;
+}
