--- a/src/components/home/cards/Card.module.css
+++ b/src/components/home/cards/Card.module.css
@@ -55,3 +55,79 @@
   filter: drop-shadow(0px 15px 40px rgba(35, 34, 99, 0.15));
   position: relative;
 }
+
+.cardproduct .content {
+  padding-left: 32.5px;
+  padding-bottom: 32.5px;
+  position: absolute;
+  bottom: 0;
+  display: grid;
+  gap: 7px;
+}
+
+.cardproduct .specialty {
+  color: var(--white);
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 140%;
+  letter-spacing: 0.2px;
+}
+
+.cardproduct .category {
+  color: var(--primary-500);
+  font-weight: 700;
+  font-size: 16px;
+  letter-spacing: 0.2px;
+  line-height: 140%;
+}
+
+.ctn_price {
+  display: flex;
+  align-items: end;
+  gap: 10px;
+  color: var(--white);
+  font-weight: 400;
+  font-size: 16px;
+  letter-spacing: 0.2px;
+}
+
+.cardproduct .price {
+  font-family: 'Plus Jakarta Sans';
+  font-weight: 700;
+  font-size: 28px;
+  color: var(--white);
+}
+
+.aboutCard {
+  aspect-ratio: 0.8709677419354839;
+  background-repeat: no-repeat;
+  background-size: cover;
+  cursor: pointer;
+  filter: drop-shadow(0px 15px 40px rgba(35, 34, 99, 0.15));
+  position: relative;
+}
+
+.aboutCard .content {
+  padding-left: 32.5px;
+  padding-right: 70px;
+  padding-bottom: 32.5px;
+  position: absolute;
+  bottom: 0;
+  display: grid;
+  gap: 7px;
+}
+
+.aboutCard .specialty {
+  color: var(--white);
+  font-weight: 600;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+}
+
+.aboutCard .category {
+  color: var(--white);
+  font-weight: 600;
+  font-size: 26px;
+  letter-spacing: 0.005em;
+}
