--- a/src/components/ui/footer/Footer.module.css
+++ b/src/components/ui/footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
   background-color: #232263;
-  clip-path: ellipse(80% 76% at 50% 75%);
+  clipPath: ellipse(80% 76% at 50% 75%);
   margin-top: 100px;
 }
 
