--- a/src/components/ui/footer/Footer.module.css
+++ b/src/components/ui/footer/Footer.module.css
@@ -1,13 +1,18 @@
 .footer {
-  background-color: #232263;
-  clip-path: ellipse(80% 76% at 50% 75%);
+  background-color: var(--secondary-500);
   margin-top: 100px;
+  position: relative;
+}
+
+.footer>svg {
+  transform: rotate(180deg);
+  position: absolute;
+  top: -1px;
 }
 
 .content {
-  width: 1245px;
   margin: auto;
-  padding-top: 6em;
+  padding-top: 100px;
   padding-bottom: 1em;
 }
 
@@ -21,9 +26,23 @@
   flex-wrap: wrap;
 }
 
+.detail {
+  display: grid;
+  grid-template-columns: 1.2fr 1fr 1fr 474px;
+  align-items: start;
+  margin-bottom: 27px;
+  gap: 30px;
+}
 
-.detail div {
-  width: 16em;
+.detail img {
+  position: absolute;
+  top: -20px;
+  right: 0;
+}
+
+.group {
+  display: grid;
+  gap: 15px;
 }
 
 .introduction {
@@ -33,7 +52,7 @@
 }
 
 .introduction p {
-  font-size: var(--body-medium-size);
+  font-size: 16px;
   color: white;
   padding-right: 27px;
 }
@@ -53,8 +72,9 @@
 
 .category {
   display: grid;
-  gap: 15px;
+  gap: 10px;
 }
+
 
 .category span {
   display: flex;
@@ -64,6 +84,9 @@
 
 .category p {
   padding-left: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.2px;
   color: var(--white);
 }
 
@@ -103,10 +126,7 @@
 .app p,
 .app label {
   color: var(--white);
-}
-
-.app p {
-  font-size: var(--body-xlarge-size);
+  font-size: 16px;
 }
 
 .newsletter {
@@ -116,6 +136,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 10px;
 }
 
 .newsletterText {
@@ -125,7 +146,8 @@
 }
 
 .newsletterText h4 {
-  font-size: var(--h4-size);
+  font-size: 18px;
+  font-weight: 500;
 }
 
 .newsletterForm {
@@ -193,4 +215,74 @@
   margin: 0px 5px;
   display: flex;
   align-items: center;
+}
+
+
+@media (max-width: 1150px) {
+  .detail img {
+    display: none;
+  }
+
+  .detail {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .content {
+    padding-top: 40px;
+  }
+
+
+  .detail {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .introduction>div {
+    display: flex;
+    justify-content: center;
+  }
+
+  .introduction p {
+    text-align: center;
+  }
+
+  .introduction label {
+    text-align: center;
+  }
+
+  .socials {
+    justify-content: center;
+  }
+
+  .group {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .group div {
+    display: flex;
+    justify-content: center;
+  }
+
+  .app p,
+  .app label {
+    text-align: center;
+  }
+
+  .newsletter {
+    display: block;
+    padding: 20px;
+  }
+
+  .newsletterInput {
+    width: 100%;
+  }
+
+  .newsletterForm {
+    width: 100%;
+  }
+
 }
