--- a/src/global.css
+++ b/src/global.css
@@ -110,8 +110,8 @@ body {
 
 .container {
   width: 100%;
-  /* padding-left: 15px;
-  padding-right: 15px; */
+  padding-left: 20px;
+  padding-right: 20px;
   position: relative;
 }
 
@@ -119,5 +119,7 @@ body {
   .container {
     max-width: 1245px;
     margin: auto;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
