--- a/src/components/home/chip/Chip.module.css
+++ b/src/components/home/chip/Chip.module.css
@@ -24,7 +24,7 @@
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 0.2px;
-  border: 1px solid #9E9E9E;
+  border: 0.1px solid #ffffff7d;
   color: var(--white);
   cursor: pointer;
 }
