--- a/src/components/ui/button/Button.module.css
+++ b/src/components/ui/button/Button.module.css
@@ -21,7 +21,7 @@
   font-size: 16px;
   letter-spacing: 0.2px;
   color: var(--white);
-  border: 0.5px solid #FFFFFF;
+  border: 0.1px solid #ffffff7d;
   filter: drop-shadow(0px 15px 40px rgba(35, 34, 99, 0.15));
   border-radius: 999px;
   display: flex;
