--- a/src/components/home/hero/Hero.module.css
+++ b/src/components/home/hero/Hero.module.css
@@ -105,3 +105,11 @@
   grid-template-columns: repeat(auto-fill, minmax(195px, 1fr));
   gap: 15px;
 }
+
+
+@media (max-width: 1024px) {
+  .cardlist {
+    grid-template-columns: repeat(auto-fill, minmax(142.5px, 1fr));
+    width: 930px;
+  }
+}
