--- a/src/global.css
+++ b/src/global.css
@@ -88,6 +88,18 @@ h6 {
   margin: 0;
 }
 
+button,
+input[type="submit"],
+input[type="reset"] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
 ul {
   text-decoration: none;
   list-style: none;
