--- a/src/components/home/hero/Hero.module.css
+++ b/src/components/home/hero/Hero.module.css
@@ -131,6 +131,26 @@
     width: 930px;
   }
 
+  .scroll {
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+  }
+
+
+  .scroll::-webkit-scrollbar {
+    background-color: #1C1C1C;
+    height: 0px;
+  }
+
+  .scroll::-webkit-scrollbar-thumb {
+    background-color: #424242;
+    border-radius: 0px;
+  }
+
+  .scroll::-webkit-scrollbar-thumb:hover {
+    background-color: #7B7B7B;
+  }
+
   .background {
     position: absolute;
     z-index: -1;
