--- a/src/components/home/headersecction/HeaderSecction.module.css
+++ b/src/components/home/headersecction/HeaderSecction.module.css
@@ -1,7 +1,6 @@
 .headersecction {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
 }
 
 .group {
@@ -24,4 +23,39 @@
   font-weight: 400;
   font-size: 20px;
   color: #1F1F1F;
+}
+
+@media (max-width: 1245px) {
+  .headersecction h2 {
+    width: 50%;
+  }
+
+}
+
+
+@media (max-width: 960px) {
+  .headersecction {
+    display: block;
+    padding-bottom: 24px;
+  }
+
+  .headersecction h2 {
+    width: 100%;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 120%;
+    text-align: center;
+  }
+
+  .headersecction p {
+    display: none;
+  }
+
+  .group {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+
 }
