--- a/src/components/ui/testimonial/Testimonial.module.css
+++ b/src/components/ui/testimonial/Testimonial.module.css
@@ -13,7 +13,7 @@
     line-height: 24px;
     margin-left: 60px;
     margin-bottom: 10px;
-    color: var(--green-primary);
+    color: var(--primary-500);;
 }
 
 .subtitle::before {
@@ -24,7 +24,7 @@
     top: 12px;
     width: 48px;
     height: 1px;
-    background: var(--green-primary);
+    background: var(--primary-500);;
 }
 
 .title {
