--- a/src/components/home/cards/Card.module.css
+++ b/src/components/home/cards/Card.module.css
@@ -48,7 +48,7 @@
 }
 
 .cardproduct {
-  aspect-ratio: 0.8709677419354839;
+  aspect-ratio: 0.75;
   background-repeat: no-repeat;
   background-size: cover;
   cursor: pointer;
