--- a/src/global.css
+++ b/src/global.css
@@ -125,6 +125,7 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   position: relative;
+  overflow: hidden;
 }
 
 @media (min-width: 1245px) {
