--- a/src/components/ui/footer/Footer.module.css
+++ b/src/components/ui/footer/Footer.module.css
@@ -189,16 +189,18 @@
 
 .menu {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(9, auto);
-  gap: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 3em 0px;
 }
 
 .menu p {
   width: auto;
   font-size: 14px;
   color: var(--white);
-  margin: 3em 0px;
+  font-weight: 400;
 }
 
 .bottombar,
@@ -218,6 +220,12 @@
   align-items: center;
 }
 
+
+@media (max-width: 1245px) {
+  .bottombar {
+    display: none;
+  }
+}
 
 @media (max-width: 1150px) {
   .detail img {
@@ -284,6 +292,11 @@
 
   .newsletterForm {
     width: 100%;
+  }
+
+  .menu {
+    justify-content: center;
+    gap: 10px;
   }
 
 }
