--- a/src/components/home/about/Video.module.css
+++ b/src/components/home/about/Video.module.css
@@ -13,6 +13,7 @@
 .video {
   display: flex;
   justify-content: center;
+  padding-bottom: 50px;
 }
 
 .content {
@@ -37,4 +38,15 @@
 .play svg {
   width: 55px;
   height: 55px;
+}
+
+
+@media(max-width: 768px) {
+  .video::before {
+    background: none;
+  }
+
+  .video {
+    padding-bottom: 24px;
+  }
 }
