--- a/src/components/home/about/About.module.css
+++ b/src/components/home/about/About.module.css
@@ -4,7 +4,17 @@
   gap: 15px;
 }
 
-.about {
-  display: grid;
-  gap: 50px;
+@media(max-width: 1245px) {
+  .cardlist {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+}
+
+@media (max-width: 960px) {
+  .cardlist {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 15px;
+    width: 1245px;
+  }
 }
