--- a/src/components/home/products/Products.module.css
+++ b/src/components/home/products/Products.module.css
@@ -4,6 +4,12 @@
   gap: 15px;
 }
 
+@media(max-width: 1245px) {
+  .products {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+}
+
 @media (max-width: 960px) {
   .products {
     display: grid;
