--- a/src/components/home/cards/Card.module.css
+++ b/src/components/home/cards/Card.module.css
@@ -11,9 +11,11 @@
   0% {
     opacity: 0;
   }
+
   50% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -29,8 +31,6 @@
   gap: 7px;
   transition: opacity 0.5s linear;
 }
-
-
 
 .specialty {
   color: var(--white);
@@ -56,12 +56,12 @@
   width: 164px;
   border-radius: 100px;
   display: none;
-
+  margin-top: 16px;
 }
 
-.aboutCard:hover .content {
+/* .aboutCard:hover .content {
   animation: fade 0.6s linear;
-}
+} */
 
 .aboutCard:hover .viewCenter {
   display: block;
@@ -163,12 +163,13 @@
   cursor: pointer;
   filter: drop-shadow(0px 15px 40px rgba(35, 34, 99, 0.15));
   position: relative;
-  transition: all 1s ease-in-out;
+  transition: all 300ms ease-in-out;
 }
 
 .aboutCard:hover::before {
   content: "";
-  background: linear-gradient(180deg, rgba(35, 34, 99, 0) 0%, rgba(35, 34, 99, 0.15) 7.81%, rgba(35, 34, 99, 0.3) 17.19%, rgba(35, 34, 99, 0.4) 27.08%, rgba(35, 34, 99, 0.5) 41.67%, rgba(35, 34, 99, 0.6) 52.6%, rgba(35, 34, 99, 0.7) 66.15%, rgba(35, 34, 99, 0.8) 80.21%, rgba(35, 34, 99, 0.85) 88.02%, rgba(35, 34, 99, 0.95) 100%);;
+  background: linear-gradient(180deg, rgba(35, 34, 99, 0) 0%, rgba(35, 34, 99, 0.15) 7.81%, rgba(35, 34, 99, 0.3) 17.19%, rgba(35, 34, 99, 0.4) 27.08%, rgba(35, 34, 99, 0.5) 41.67%, rgba(35, 34, 99, 0.6) 52.6%, rgba(35, 34, 99, 0.7) 66.15%, rgba(35, 34, 99, 0.8) 80.21%, rgba(35, 34, 99, 0.85) 88.02%, rgba(35, 34, 99, 0.95) 100%);
+  ;
   position: absolute;
   border-radius: 55px;
   top: 0;
