--- a/src/components/home/application/Application.module.css
+++ b/src/components/home/application/Application.module.css
@@ -4,8 +4,9 @@
   gap: 15px;
   font-family: var(--noto-sans);
 }
+
 .appImage {
-  background: url("./images/application/app.png");
+  background: url("/images/application/app.png");
   background-repeat: no-repeat;
   background-size: contain;
   position: relative;
@@ -38,6 +39,7 @@
 .appDescription h2 {
   color: var(--secondary-500);
 }
+
 .appDescription b {
   color: var(--primary-500);
 }
@@ -74,6 +76,7 @@
     display: flex;
     flex-direction: column-reverse;
   }
+
   .appImage {
     width: 100%;
     height: 55rem;
@@ -86,9 +89,11 @@
     width: 100%;
     height: 25rem;
   }
+
   .scanQR {
     display: none;
   }
+
   .appDescription {
     width: 100%;
   }
