--- a/src/components/home/cards/Card.module.css
+++ b/src/components/home/cards/Card.module.css
@@ -63,7 +63,7 @@
   animation: fade 0.6s linear;
 } */
 
-.aboutCard:hover .viewCenter {
+.aboutCard:hover .viewCenter , .cardproduct:hover .viewCenter{
   display: block;
 }
 
@@ -79,6 +79,9 @@
 
   .category {
     font-size: 12px;
+  }
+  .aboutCard:hover .viewCenter , .cardproduct:hover .viewCenter {
+    display: none;
   }
 }
 
@@ -166,10 +169,9 @@
   transition: all 300ms ease-in-out;
 }
 
-.aboutCard:hover::before {
+.aboutCard:hover::before , .cardproduct:hover::before {
   content: "";
   background: linear-gradient(180deg, rgba(35, 34, 99, 0) 0%, rgba(35, 34, 99, 0.15) 7.81%, rgba(35, 34, 99, 0.3) 17.19%, rgba(35, 34, 99, 0.4) 27.08%, rgba(35, 34, 99, 0.5) 41.67%, rgba(35, 34, 99, 0.6) 52.6%, rgba(35, 34, 99, 0.7) 66.15%, rgba(35, 34, 99, 0.8) 80.21%, rgba(35, 34, 99, 0.85) 88.02%, rgba(35, 34, 99, 0.95) 100%);
-  ;
   position: absolute;
   border-radius: 55px;
   top: 0;
@@ -212,6 +214,10 @@
 
   .aboutCard .category {
     font-size: 24px;
+  }
+
+  .aboutCard:hover::before, .cardproduct:hover::before  {
+    background: none;
   }
 
 }
