--- a/src/components/ui/ButtonDecesos/Button.module.css
+++ b/src/components/ui/ButtonDecesos/Button.module.css
@@ -2,13 +2,13 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	color: var(--white-primary);
+	color: var(--white);
 	white-space: nowrap;
 	text-align: center;
 	font-size: 16px;
 	font-weight: 600;
 	border-radius: var(--buttons-border-radius);
-	border: 1px solid var(--primary-500);;
+	border: 1px solid var(--primary-500);
 	box-shadow: 20px 25px 60px rgba(0, 152, 58, 0.15);
 	width: 100%;
 	padding: 10px;
@@ -18,14 +18,14 @@
 }
 
 .green_button {
-	background-color: var(--primary-500);;
-	color: var(--white-primary);
+	background-color: var(--primary-500);
+	color: var(--white);
 }
 
 .white_button {
 	background-color: transparent;
-	color: var(--gray-primary);
-	border: 0.5px solid var(--gray-primary);
+	color: var(--grey-800);
+	border: 0.5px solid var(--grey-800);
 	transition: color .2s, background .2s, border .2s;
 }
 
@@ -44,18 +44,18 @@
 
 	.white_button:hover {
 		transition: 0.2s ease-in;
-		background-color: var(--primary-500);;
-		color: var(--white-primary);
+		background-color: var(--primary-500);
+		color: var(--white);
 	}
 	
 	.green_button:hover {
 		transition: 0.2s ease-in;
-		background-color: var(--white-primary);
-		color: var(--primary-500);;
+		background-color: var(--white);
+		color: var(--primary-500);
 	}
 
 	.disabled:hover {
-		color: var(--white-primary);
+		color: var(--white);
 		background-color: rgb(157, 160, 162);
 	}
 
