--- a/src/components/ui/FooterDecesos/Footer.module.css
+++ b/src/components/ui/FooterDecesos/Footer.module.css
@@ -12,7 +12,7 @@
 	font-size: 14px;
 	line-height: 18px;
 	font-weight: 500;
-	color: var(--blue-primary);
+	color: var(--secondary-500);
 	margin-top: 22px;
 }
 
@@ -74,7 +74,7 @@
 }
 
 .footer_copyright p {
-	color: var(--blue-primary);
+	color: var(--secondary-500);
 }
 
 .logo_container {
