--- a/src/components/ui/testimonial/testimonialcard/TestimonialCard.module.css
+++ b/src/components/ui/testimonial/testimonialcard/TestimonialCard.module.css
@@ -26,7 +26,7 @@
 .name {
     font-size: 14px;
     font-weight: 600;
-    color: var(--blue-primary);
+    color: var(--secondary-500);
     line-height: 22px;
 }
 
