--- a/src/components/home/hero/Hero.module.css
+++ b/src/components/home/hero/Hero.module.css
@@ -1,5 +1,5 @@
 .background {
-  background: url("/background_hero.png");
+  background: url("/background_hero.webp");
   width: 100%;
   height: 45rem;
   background-repeat: no-repeat;
