--- a/src/components/home/hero/Hero.module.css
+++ b/src/components/home/hero/Hero.module.css
@@ -120,9 +120,6 @@
     grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
   }
 
-  /* .background {
-    height: 37rem;
-  } */
 }
 
 @media (max-width: 960px) {
@@ -159,6 +156,10 @@
     left: 0;
     top: 0;
     background: var(--secondary-500);
+    background-image: url("/background_movil.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
   }
 
   .content {
