--- a/src/components/home/about/Video.module.css
+++ b/src/components/home/about/Video.module.css
@@ -1,7 +1,7 @@
 .video::before {
   content: "";
   position: absolute;
-  width: 1245px;
+  width: 100%;
   height: 597px;
   left: 0;
   top: 57px;
