--- a/src/components/ui/Checkbox/Checkbox.module.css
+++ b/src/components/ui/Checkbox/Checkbox.module.css
@@ -4,11 +4,11 @@
     justify-content: center;
     width: 24px;
     height: 24px;
-    border: 1px solid var(--green-primary);
+    border: 1px solid var(--primary-500);
     background-color: #fff;
     border-radius: 4px;
 }
 
 .active {
-    background-color: var(--green-primary);
+    background-color: var(--primary-500);
 }
