--- a/src/components/home/Details/Details.module.css
+++ b/src/components/home/Details/Details.module.css
@@ -9,11 +9,23 @@
 	grid-row: 1;
 }
 
+.content>svg {
+	width: 190px;
+	height: 60px;
+}
+
+.content>p {
+	font-size: 20px;
+	color: #212121;
+	font-weight: 400;
+}
+
 @media (min-width: 1024px) {
 	.details {
 		grid-template-columns: 1fr 1fr;
 		grid-gap: 60px;
 		margin-bottom: var(--section-margin-desktop);
+		align-items: center;
 	}
 
 	.content {
