--- a/src/components/home/Details/DetailsOptions/DetailsOptions.module.css
+++ b/src/components/home/Details/DetailsOptions/DetailsOptions.module.css
@@ -1,4 +1,3 @@
-
 .details_options {
 	margin-top: 10px;
 	display: flex;
@@ -8,7 +7,7 @@
 
 @media (min-width: 1024px) {
 	.details_options {
-		margin-top: 50px;
-		width: 80%;
+		margin-top: 20px;
+		/* width: 80%; */
 	}
 }
