--- a/src/components/home/cards/Card.module.css
+++ b/src/components/home/cards/Card.module.css
@@ -23,8 +23,8 @@
 
 .content {
   padding-top: 5px;
-  padding-left: 5px;
-  padding-right: 50px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .specialty {
@@ -33,6 +33,7 @@
   font-size: 16px;
   line-height: 140%;
   letter-spacing: 0.2px;
+  text-align: center;
 }
 
 .category {
@@ -41,6 +42,8 @@
   font-size: 14px;
   letter-spacing: 0.2px;
   line-height: 140%;
+  text-align: center;
+
 }
 
 .viewCenter {
