--- a/src/components/home/search/Search.module.css
+++ b/src/components/home/search/Search.module.css
@@ -135,10 +135,14 @@
   cursor: pointer;
 }
 
+.button:hover {
+  background-color: var(--primary-400);
+}
+
 .search {
   position: relative;
   border-radius: 24px;
-  background: rgba(35, 34, 99, 0.2);
+  background: rgba(0, 152, 58, 0.2);
   box-shadow: 0 40px 30px rgba(35, 34, 99, 0.02),
     0 16px 10px rgba(35, 34, 99, 0.02), 0 0 15px rgba(35, 34, 99, 0.02);
   width: 100%;
