--- a/src/components/home/hero/Hero.module.css
+++ b/src/components/home/hero/Hero.module.css
@@ -10,6 +10,15 @@
   overflow: hidden;
 }
 
+/* .background iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+} */
+
 .background video {
   text-align: center;
   background-size: cover;
