--- a/src/components/home/cards/Card.module.css
+++ b/src/components/home/cards/Card.module.css
@@ -50,19 +50,17 @@
   background-color: var(--primary-500);
   color: white;
   font-size: 16px;
-  padding: 15px 16px;
-  width: 164px;
+  padding: 18px 30px;
+  letter-spacing: 0.2px;
   border-radius: 100px;
-  display: none;
-  margin-top: 16px;
   font-weight: 600;
 }
 
 
-.aboutCard:hover .viewCenter,
+/* .aboutCard:hover .viewCenter,
 .cardproduct:hover .viewCenter {
   display: block;
-}
+} */
 
 @media (max-width: 1024px) {
   .content {
@@ -79,13 +77,13 @@
     font-size: 12px;
   }
 
-  .aboutCard:hover .viewCenter,
+  /* .aboutCard:hover .viewCenter,
   .cardproduct:hover .viewCenter {
     display: none;
-  }
+  } */
 }
 
-.cardproduct {
+.bg_product {
   aspect-ratio: 0.75;
   background-repeat: no-repeat;
   background-size: cover;
@@ -94,46 +92,50 @@
   position: relative;
 }
 
-.cardproduct .content {
-  padding-left: 32.5px;
-  padding-bottom: 32.5px;
-  position: absolute;
-  bottom: 0;
-  display: grid;
-  gap: 7px;
+.product>div {
+  padding-top: 5px;
+  cursor: pointer;
 }
 
-.cardproduct .specialty {
-  color: var(--white);
+.ctn_button {
+  display: flex;
+  justify-content: center;
+  margin-top: 5px;
+}
+
+.product h2 {
+  color: var(--secondary-500);
   font-weight: 600;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 140%;
   letter-spacing: 0.2px;
+  text-align: center;
 }
 
-.cardproduct .category {
+.product h3 {
   color: var(--primary-500);
-  font-weight: 700;
-  font-size: 16px;
+  font-weight: 600;
+  font-size: 18px;
   letter-spacing: 0.2px;
   line-height: 140%;
+  text-align: center;
 }
 
 .ctn_price {
   display: flex;
-  align-items: end;
+  align-items: center;
   gap: 10px;
-  color: var(--white);
-  font-weight: 400;
+  color: var(--secondary-500);
+  font-weight: 500;
   font-size: 16px;
   letter-spacing: 0.2px;
+  justify-content: center;
 }
 
-.cardproduct .price {
-  font-family: 'Plus Jakarta Sans';
+.price {
   font-weight: 700;
-  font-size: 28px;
-  color: var(--white);
+  font-size: 30px;
+  color: var(--secondary-500);
 }
 
 @media (max-width: 1024px) {
@@ -217,10 +219,10 @@
     font-size: 24px;
   }
 
-  .aboutCard:hover::before,
+  /* .aboutCard:hover::before,
   .cardproduct:hover::before {
     background: none;
-  }
+  } */
 
 }
 
