--- a/src/views/home/Home.module.css
+++ b/src/views/home/Home.module.css
@@ -4,9 +4,9 @@
   overflow: hidden;
 }
 
-.section_hero {
+/* .section_hero {
   overflow: hidden;
-}
+} */
 
 .section_products {
   display: grid;
