--- a/src/components/home/cards/Card.module.css
+++ b/src/components/home/cards/Card.module.css
@@ -1,5 +1,5 @@
-.cardsmall {
-  aspect-ratio: 0.7259325441143623;
+.bg_freespecialties {
+  aspect-ratio: 0.8709677419354839;
   background-repeat: no-repeat;
   background-size: cover;
   cursor: pointer;
@@ -7,19 +7,114 @@
   position: relative;
 }
 
-@keyframes fade {
-  0% {
-    opacity: 0;
+.freespecialties h2 {
+  color: var(--secondary-500);
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 140%;
+  letter-spacing: 0.2px;
+  text-align: center;
+}
+
+.freespecialties h3 {
+  color: var(--primary-500);
+  font-weight: 600;
+  font-size: 18px;
+  letter-spacing: 0.2px;
+  line-height: 140%;
+  text-align: center;
+}
+
+
+.viewCenter {
+  background-color: var(--primary-500);
+  color: white;
+  font-size: 16px;
+  padding: 18px 30px;
+  letter-spacing: 0.2px;
+  border-radius: 100px;
+  font-weight: 600;
+  box-shadow: 4px 8px 24px rgba(0, 152, 58, 0.25);
+}
+
+.viewCenter:hover {
+  background-color: var(--primary-400);
+}
+
+@media (max-width: 1245px) {
+  .freespecialties h2 {
+    font-size: 22px;
   }
 
-  50% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
+  .freespecialties h3 {
+    font-size: 16px;
   }
 }
+
+@media (max-width: 1024px) {
+  .freespecialties h2 {
+    font-size: 18px;
+  }
+
+  .freespecialties h3 {
+    font-size: 16px;
+  }
+
+  .viewCenter {
+    font-size: 14px;
+    padding: 14px 28px;
+  }
+}
+
+@media (max-width: 768px) {
+  .freespecialties h2 {
+    font-size: 16px;
+  }
+
+  .freespecialties h3 {
+    font-size: 14px;
+  }
+}
+
+.bg_banner {
+  aspect-ratio: 2.49;
+  background-repeat: no-repeat;
+  background-size: cover;
+  cursor: pointer;
+  filter: drop-shadow(0px 15px 40px rgba(35, 34, 99, 0.15));
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  padding-left: 70px;
+}
+
+
+.cardbanner h2 {
+  font-weight: 600;
+  font-size: 45px;
+  letter-spacing: 0.03em;
+  color: var(--secondary-500);
+}
+
+.cardbanner h3 {
+  font-weight: 600;
+  font-size: 24px;
+  letter-spacing: 0.03em;
+  color: var(--secondary-500);
+  padding-bottom: 24px;
+}
+
+
+
+
+
+
+
+
+
+
 
 .content {
   padding-top: 5px;
@@ -46,21 +141,8 @@
   text-align: center;
 }
 
-.viewCenter {
-  background-color: var(--primary-500);
-  color: white;
-  font-size: 16px;
-  padding: 18px 30px;
-  letter-spacing: 0.2px;
-  border-radius: 100px;
-  font-weight: 600;
-}
 
 
-/* .aboutCard:hover .viewCenter,
-.cardproduct:hover .viewCenter {
-  display: block;
-} */
 
 @media (max-width: 1024px) {
   .content {
