--- a/src/global.css
+++ b/src/global.css
@@ -170,6 +170,12 @@ body {
   position: relative;
 }
 
+@media (max-width: 700px) {
+  .container {
+    display: none;
+  }
+}
+
 @media (min-width: 1245px) {
   .container {
     max-width: 1245px;
