--- a/src/components/home/CallAction/CallAction.module.css
+++ b/src/components/home/CallAction/CallAction.module.css
@@ -1,5 +1,4 @@
 .call_action {
-	margin-bottom: var(--section-margin-mobile);
 	display: grid;
 	align-items: center;
 	grid-template-columns: 1fr;
@@ -7,7 +6,13 @@
 
 .content {
 	width: 100%;
+	margin-bottom: 80px;
+}
+
+
+.margin {
 	margin-bottom: 20px;
+
 }
 
 .description {
@@ -27,6 +32,7 @@
 	color: var(--textos);
 	margin-bottom: 20px;
 }
+
 
 .buttons {
 	margin-top: 20px;
@@ -58,7 +64,6 @@
 @media (min-width: 1024px) {
 
 	.call_action {
-		margin-bottom: var(--section-margin-desktop);
 		grid-template-columns: auto 1fr;
 		grid-gap: 50px;
 	}
