--- a/src/components/home/cards/Card.module.css
+++ b/src/components/home/cards/Card.module.css
@@ -34,6 +34,7 @@
   letter-spacing: 0.2px;
   border-radius: 100px;
   font-weight: 600;
+  height: 58px;
   box-shadow: 4px 8px 24px rgba(0, 152, 58, 0.25);
 }
 
@@ -77,6 +78,7 @@
 }
 
 .bg_banner {
+  background: url("./images/products/Dental.webp");
   aspect-ratio: 2.49;
   background-repeat: no-repeat;
   background-size: cover;
@@ -106,11 +108,131 @@
   padding-bottom: 24px;
 }
 
+@media (max-width: 768px) {
+  .bg_banner {
+    background: url("./images/products/Banner_movil_dental.webp");
+    aspect-ratio: 0.63;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .cardbannerinformative h2 {
+    width: 100%;
+    text-align: center;
+
+  }
+
+  .cardbannerinformative h3 {
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+  }
+
+  .ctn_button_banner {
+    display: flex;
+    justify-content: center;
+  }
+}
 
 
 
+.bg_bannerinformative {
+  background: url("./images/products/Banner.webp");
+  aspect-ratio: 2.075;
+  background-repeat: no-repeat;
+  background-size: cover;
+  cursor: pointer;
+  filter: drop-shadow(0px 15px 40px rgba(35, 34, 99, 0.15));
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  align-items: end;
+  padding-right: 70px;
+}
 
+.cardbannerinformative h2 {
+  font-weight: 600;
+  font-size: 45px;
+  letter-spacing: 0.03em;
+  color: var(--secondary-500);
+  width: 550px;
+  line-height: 50px;
+}
 
+.cardbannerinformative h3 {
+  font-weight: 500;
+  font-size: 20px;
+  letter-spacing: 0.03em;
+  color: var(--white);
+  padding-bottom: 24px;
+  width: 550px;
+
+  line-height: 1.5em;
+  padding-top: 15px;
+}
+
+@media (max-width: 1245px) {
+  .bg_bannerinformative {
+    padding-right: 30px;
+  }
+
+  .cardbannerinformative h2 {
+    font-size: 35px;
+    line-height: 40px;
+    width: 500px;
+  }
+
+  .cardbannerinformative h3 {
+    font-size: 18px;
+    width: 500px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .bg_bannerinformative {
+    padding-right: 30px;
+  }
+
+  .cardbannerinformative h2 {
+    font-size: 30px;
+    line-height: 35px;
+  }
+
+  .cardbannerinformative h3 {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+  .bg_bannerinformative {
+    background: url("./images/products/Banner_Movil.webp");
+    aspect-ratio: 0.5658682634730539;
+    padding-right: 0px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: block;
+    padding: 32px 16px;
+  }
+
+  .cardbannerinformative h2 {
+    width: 100%;
+    text-align: center;
+
+  }
+
+  .cardbannerinformative h3 {
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+  }
+
+  .ctn_button_banner {
+    display: flex;
+    justify-content: center;
+  }
+}
 
 
 
