--- a/src/components/ui/testimonial/Testimonial.module.css
+++ b/src/components/ui/testimonial/Testimonial.module.css
@@ -2,7 +2,6 @@
     display: grid;
     grid-template-columns: 1fr;
     height: 100%;
-    margin-bottom: var(--section-margin-mobile);
     grid-gap: 14px;
 }
 
@@ -13,7 +12,8 @@
     line-height: 24px;
     margin-left: 60px;
     margin-bottom: 10px;
-    color: var(--primary-500);;
+    color: var(--primary-500);
+    ;
 }
 
 .subtitle::before {
@@ -24,7 +24,8 @@
     top: 12px;
     width: 48px;
     height: 1px;
-    background: var(--primary-500);;
+    background: var(--primary-500);
+    ;
 }
 
 .title {
@@ -54,22 +55,21 @@
 }
 
 @media (min-width: 1024px) {
-	.testimonial {
+    .testimonial {
         grid-template-columns: 547px 1fr;
-        margin-bottom: var(--section-margin-desktop);
     }
-    
+
     .content {
         display: flex;
         flex-direction: column;
         justify-content: center;
         gap: 20px;
     }
-    
+
     .subtitle {
         font-size: 20px;
     }
-    
+
     .title {
         font-size: 45px;
         line-height: 55px;
