--- a/src/global.css
+++ b/src/global.css
@@ -170,11 +170,11 @@ body {
   position: relative;
 }
 
-@media (max-width: 700px) {
+/* @media (max-width: 700px) {
   .container {
     display: none;
   }
-}
+} */
 
 @media (min-width: 1245px) {
   .container {
