--- a/src/components/home/cards/Card.module.css
+++ b/src/components/home/cards/Card.module.css
@@ -78,7 +78,7 @@
 }
 
 .bg_banner {
-  background: url("./images/products/Dental.webp");
+  background: url("/images/products/Dental.webp");
   aspect-ratio: 2.49;
   background-repeat: no-repeat;
   background-size: cover;
@@ -110,7 +110,7 @@
 
 @media (max-width: 768px) {
   .bg_banner {
-    background: url("./images/products/Banner_movil_dental.webp");
+    background: url("/images/products/Banner_movil_dental.webp");
     aspect-ratio: 0.63;
     background-repeat: no-repeat;
     background-size: cover;
@@ -137,7 +137,7 @@
 
 
 .bg_bannerinformative {
-  background: url("./images/products/Banner.webp");
+  background: url("/images/products/Banner.webp");
   aspect-ratio: 2.075;
   background-repeat: no-repeat;
   background-size: cover;
@@ -207,7 +207,7 @@
 
 @media (max-width: 768px) {
   .bg_bannerinformative {
-    background: url("./images/products/Banner_Movil.webp");
+    background: url("/images/products/Banner_Movil.webp");
     aspect-ratio: 0.5658682634730539;
     padding-right: 0px;
     background-repeat: no-repeat;
