--- a/src/components/home/cards/Card.module.css
+++ b/src/components/home/cards/Card.module.css
@@ -114,18 +114,20 @@
     aspect-ratio: 0.63;
     background-repeat: no-repeat;
     background-size: cover;
+    padding-left: 0px;
+    padding: 0 15px;
   }
 
-  .cardbannerinformative h2 {
+  .cardbanner h2 {
     width: 100%;
     text-align: center;
-
+    font-size: 35px;
   }
 
-  .cardbannerinformative h3 {
+  .cardbanner h3 {
     width: 100%;
     text-align: center;
-    font-size: 16px;
+    font-size: 20px;
   }
 
   .ctn_button_banner {
@@ -213,7 +215,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     display: block;
-    padding: 32px 16px;
+    padding: 30px 15px;
   }
 
   .cardbannerinformative h2 {
