--- a/src/components/ui/button/Button.module.css
+++ b/src/components/ui/button/Button.module.css
@@ -4,13 +4,14 @@
   padding: 12px 24px;
   font-weight: 500;
   font-size: 16px;
-  letter-spacing: 0.01em;
   color: var(--white);
-  border-radius: 16px;
+  border-radius: 999px;
   display: flex;
   align-items: center;
   cursor: pointer;
   letter-spacing: 0.2px;
+  justify-content: center;
+
 }
 
 .buttonprimary:hover {
