--- a/src/components/home/CallAction/CallAction.module.css
+++ b/src/components/home/CallAction/CallAction.module.css
@@ -6,7 +6,7 @@
 
 .content {
 	width: 100%;
-	margin-bottom: 80px;
+	margin-bottom: 30px;
 }
 
 
@@ -72,6 +72,7 @@
 		grid-column: 2 / 3;
 		grid-row: 1;
 		min-width: 450px;
+		padding-bottom: 80px;
 	}
 
 	.description {
@@ -103,4 +104,5 @@
 		grid-column: 1 / 2;
 		grid-row: 1;
 	}
+
 }
