--- a/src/components/home/cards/Card.module.css
+++ b/src/components/home/cards/Card.module.css
@@ -282,11 +282,6 @@
   .category {
     font-size: 12px;
   }
-
-  /* .aboutCard:hover .viewCenter,
-  .cardproduct:hover .viewCenter {
-    display: none;
-  } */
 }
 
 .bg_product {
@@ -362,7 +357,7 @@
     font-size: 14px;
   }
 
-  .cardproduct .price {
+  .price {
     font-size: 24px;
   }
 }
