--- a/src/components/home/HireMessage/HireMessage.module.css
+++ b/src/components/home/HireMessage/HireMessage.module.css
@@ -8,12 +8,11 @@
     display: block;
     width: 100%;
     height: auto;
-    border-radius: 24px;
 }
 
 .content {
     position: absolute;
-    top: 7%;
+    top: 25%;
     left: 11%;
     width: 79%;
     text-align: center;
@@ -132,9 +131,9 @@
 
 
 
-    .hire_message img {
+    /* .hire_message img {
         border-radius: 36px;
-    }
+    } */
 
     .content {
         top: 0;
