--- a/src/components/home/HireMessage/HireMessage.module.css
+++ b/src/components/home/HireMessage/HireMessage.module.css
@@ -56,9 +56,9 @@
     margin-top: 10px;
 }
 
-.button_container button {
+/* .button_container button {
     height: 42px;
-}
+} */
 
 @media (min-width: 500px) {
 
