--- a/src/components/home/CallAction/CallAction.module.css
+++ b/src/components/home/CallAction/CallAction.module.css
@@ -9,6 +9,12 @@
 	margin-bottom: 30px;
 }
 
+.content h2 {
+	font-size: 26px;
+	color: var(--secondary-500);
+	font-weight: 500;
+	margin-bottom: 22px;
+}
 
 .margin {
 	margin-bottom: 20px;
@@ -103,6 +109,12 @@
 	.images_container {
 		grid-column: 1 / 2;
 		grid-row: 1;
+	}
+
+	.content h2 {
+		font-weight: 500;
+		font-size: 30px;
+		margin-bottom: 15px
 	}
 
 }
